--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="css/main.css" rel="stylesheet">
 </head>
 
-<body>
+<body oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
     <div class="container">
         <div class="row">
             <div class="nav">
