--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     처음 서지혜를 만난 건 호텔이었다.
                     <br>
                     애인과 헤어졌다, 그쯤. 이별 전에 예약해둔 호텔이 아까워, 사실은 한 달 정도 아무것도 안 하고 싶어서. 예약을 해둔 호텔이 있는 제주도까지 날아가서는 묵었던 방, 그 옆방이
-                    서지혜의 방이었다. 별이 몇 개나 붙는 그런 호텔은 아니었지만, 조금 더 좋은 호텔을 예약할 수 있었는데, 사정이 있어서. 그래도 나름 이름이 난 호텔라고 예약한 것이었는데.
+                    서지혜의 방이었다. 별이 몇 개나 붙는 그런 호텔은 아니었지만, 조금 더 좋은 호텔을 예약할 수 있었는데, 사정이 있어서. 그래도 나름 이름이 난 호텔이라고 예약한 것이었는데.
                     <i>하아..</i> 방이 가깝게 붙어서인지 방음이 좋지 않았다. 체크인을 한 것은 오후 세 시, 그리고 옆방에서 들리던 신음 소리도 그때. 분명 문이 닫히는 소리쯤은, 신음
                     소리가 들릴
                     정도의 방음이면 옆방에 사람이 들어왔음을 알아차렸을 텐데 멈추는 것이 없었다. 이 세계에서, 적어도 제가 있던 세계에서는 흔한 일이라고 할 수 있어 큰 상관은 없었지만,
