--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     소리가 들릴
                     정도의 방음이면 옆방에 사람이 들어왔음을 알아차렸을 텐데 멈추는 것이 없었다. 이 세계에서, 적어도 제가 있던 세계에서는 흔한 일이라고 할 수 있어 큰 상관은 없었지만,
                     <i>으읏..</i>
-                    밤에서까지 이어지는 것에는 분명이 상관이 있었다.
+                    밤에서까지 이어지는 것에는 분명히 상관이 있었다.
                     <br>
                     저마다의 높낮이, 들을 때마다 달라지는 사람의 소리. 그래봤자 결국엔 여자의 음성. 그 이후로는 밤마다 들리는 신음 소리에 방을 바꿀까 하다 본래 예민해서 귀마개를 착용하는 습관이
                     있어 귀마개를 꽂으면 들리지 않아 그런 대로 한 달을 지내고 어느 날, 피곤해서 낮부터 들어오던 때에. 그 엘리베이터에 서지혜가 타고 있었다.
