--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     우성 오메가 집안, 이 세계에선 우성 알파 집안은 있어도 우성 오메가 집안은 드물었다. 더군다나 서양에 비해, 또 아시아 중에서 제일 보수적인 대한민국에서는 감히 ‘우성 오메가
                     집안’이라고 불릴 수는 없었다. 그것도 옛 이야기라고 하지만, 어쨌거나 대한민국을 주름 잡는 몇 기업 중에 손에 꼽히던 게 제 집안에서 운영하는 기업이었고, 덕분에 대학 정도는
                     졸업을 못해도 취업에 걱정이 없었다. 그래서 어그러진 거, 서지혜가 주는 C에 학점이 어그러진 거, 적당히 학교 다니다 집안에서 운영하는 회사 중 어느 곳에 들어가야겠다 생각하고
-                    있었다. 그래서 서지혜가 불만이면 오라던 그 연구실도 가지 않았는데, 의도하지 않게 엮이고 말았다.
+                    있었다. 때문에 서지혜가 불만이면 오라던 그 연구실도 가지 않았는데, 의도하지 않게 엮이고 말았다.
                     <br>
                     유니크 오메가, 라고 했다. 오메가 중에 유일하게 지배욕이 있고, 히트 사이클을 쉽게 조절할 수 있는 오메가. 말이 유니크 오메가였지, 그저 발현이 더딘 제게 위로의 말로 건네는
                     말 같았다.
