--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     어느 정도 차에 속도가 붙을 쯤 들리는 소리에 서지혜는 여전히 안전벨트를 하지 않은 채 차만 돌려서는 주차장에서 좀 더 안쪽으로, 구석으로 차를 이동시키고는 차를 세운 뒤 시동이
                     꺼진 지 얼마나 됐다고 차에서 내려서는 바로 제가 있는 뒤로 와서 입을 맞췄다.
                     <br>
-                    베타랑 관계를 맺은 경험이 없지는 않았다. 아무래도 지금껏 발현이 되지 않아 알파를 만나기도 뭐하고, 오메가를 만나기도 뭐해서 처음은 아니죠? 만나던 것이 전부 베타였고. 그때 그
+                    베타랑 관계를 맺은 경험이 없지는 않았다. 아무래도 지금껏 발현이 되지 않아 알파를 만나기도 뭐하고, 오메가를 만나기도 뭐해서 <i>처음은 아니죠?</i> 만나던 것이 전부 베타였고. 그때 그
                     호텔을 예약한 것도 제 집안이나 젠더를 알지 못할 베타를 위한 그저 그런 호텔을 예약한 것이었다.
                     <br>
                     입을 맞추고는 잠깐 떨어질 때, 물어본 것에 답을 해준 적은 없는데 다시 입을 맞추고 입안을 헤집을 쯤 제 바지의 버클은 언제 풀었는지 바지 안, 그것도 바로 속옷 안으로 손을
