--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     호텔을 예약한 것도 제 집안이나 젠더를 알지 못할 베타를 위한 그저 그런 호텔을 예약한 것이었다.
                     <br>
                     입을 맞추고는 잠깐 떨어질 때, 물어본 것에 답을 해준 적은 없는데 다시 입을 맞추고 입안을 헤집을 쯤 제 바지의 버클은 언제 풀었는지 바지 안, 그것도 바로 속옷 안으로 손을
-                    넣었더니 <i>아.</i> 이렇다한 신호도 없이 손가락을 찔러 넣는다.
+                    넣더니 <i>아.</i> 이렇다한 신호도 없이 손가락을 찔러 넣는다.
                     <br>
                     발정 난, 아니 발현된 오메가를 해소해 줄 것이라곤 알파의 것밖에 없는데. 고작 성욕만 앞서는 베타가 아무리 여기저기를 찔러댄다고 해도 잠시 억제만 해줄 뿐, <i>걱정 마세요,
                         오메가랑은 꽤 해봤으니까.</i> 그것마저 지금 상황에서는 더 악화시키는 것밖에 없었다.
