--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     처음은 아니지만 경험이 적은 저에겐 버거운 것에 서지혜가 하는 말은 들을 생각도 없이 겨우 말을 뱉으면, 서지혜 역시 제 말은 들을 생각도 없이 쳐올리고서는 자기 말이 끝났는지
                     입을 맞추고는 제멋대로 헤집더니 <i>그때 왜 안 왔어요. 기다렸는데.</i> 떨어져서 하는 말에 그제야 눈을 마주치면, 곧 잡아먹을 것 같은 눈을 하고는 그와 맞지 않게 입꼬리는
                     올려서는
-                    <i>알파도 아니라 해소는 안 될 거고, 억제제나 놔줄게요.</i> 남은 말을 잇고는 가까워진 얼굴이 내려간다더니 제 아래에 입을 맞추었다.
+                    <i>알파도 아니라 해소는 안 될 거고, 억제제나 놔줄게요.</i> 남은 말을 잇고는 가까워진 얼굴이 내려가더니 제 아래에 입을 맞추었다.
                     <br>
                     <br>
                     베타 주제에 왜 오메가의 억제제를 가지고 있을까.
