--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     <br>
                     학교가 아닌 곳에서, 흔히 말해서 친목을 위한 사교 모임에서 히트 사이클이 터졌을 때. 제 의지와 상관없이 상황이 흘러갔을 때. 처음으로 알파의 것을 받았을 때, 서지혜의 그
                     억제제가 정말 억제제가 아니라고 해도 그것을 어떻게 해서든 가져야겠다는 생각이 들었다. 다음으로는 <i>처음이야?</i> 누구는 괴로워하고 있는데 한쪽 입꼬리만 올리며 서지혜의 손가락과는
-                    버금가지도 못할 것을 쳐올리는 면상을 보면서, 아니 제 몸 안에서 온갖 곳을 헤집던 그 불덩이가 사라지고 있다는 느낌이 들면서. 서지혜의 그 억제제가, 아니 서지혜가 생각이 났다.
+                    버금가지도 못할 것을 쳐올리는 면상을 보면서, 제 몸 안에서 온갖 곳을 헤집던 그 불덩이가 사라지고 있다는 느낌이 들면서. 서지혜의 그 억제제가, 아니 서지혜가 생각이 났다.
                     <br>
                     거의 당하는 것에 가까운 관계가 끝나고, 끝나기 전부터 해소되는 것에 현타란 것이 왔다. 저에 대한 건 아니고, 서지혜에 대해서. 아무리 관계를 맺어도 해소를 시켜줄 수 없어
                     억제제를 주던 그 베타 서지혜에 대해서.
